--- a/src/Styles/base.scss
+++ b/src/Styles/base.scss
@@ -1,7 +1,14 @@
 body {
   font-family: "Source Sans Pro", Arial, sans-serif;
+  background-color: #fafafc;
 
   a {
     text-decoration: none;
+  }
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-search-results-button,
+  input[type="search"]::-webkit-search-results-decoration {
+    -webkit-appearance: none;
   }
 }
